--- a/css/main.css
+++ b/css/main.css
@@ -2688,7 +2688,8 @@ body {
       flex-direction: column;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
-  width: auto; }
+  width: auto;
+  margin-top: 10px; }
   @media screen and (min-width: 1500px) {
     #home {
       -ms-flex-direction: row;
@@ -2705,6 +2706,9 @@ body {
       #home section {
         min-width: 0px;
         max-width: 960px; } }
+    @media screen and (max-width: 750px) {
+      #home section {
+        margin: 0 10px 0 20px; } }
     #home section li {
       background-image: url(/assets/img/humane.jpg);
       background-repeat: no-repeat;
@@ -2806,6 +2810,9 @@ body {
     font-size: 26px;
     margin: 20px 20px 0 0;
     color: #f1eeeb; }
+    @media screen and (max-width: 750px) {
+      .Bio h2 {
+        margin: 20px 10px 0 0; } }
 
 #bio {
   padding: 0 20px 20px 20px;
@@ -2817,7 +2824,8 @@ body {
       display: block; } }
   @media screen and (max-width: 750px) {
     #bio {
-      display: block; } }
+      display: block;
+      padding: 0 10px 20px 10px; } }
   #bio #portrait {
     padding-top: 20px;
     -ms-flex-positive: 1;
@@ -2835,10 +2843,13 @@ body {
 .Contact {
   max-width: 960px; }
   .Contact h2 {
-    margin: 20px 20px 20px 0; }
+    margin: 20px 10px 20px 0; }
   .Contact form {
     display: block;
     margin: 0 20px; }
+    @media screen and (max-width: 750px) {
+      .Contact form {
+        margin: 0 10px 0 20px; } }
     .Contact form textarea {
       box-sizing: border-box;
       border: none;
@@ -2928,6 +2939,9 @@ div.post {
   max-width: 960px;
   padding: 0 20px;
   color: #f1eeeb; }
+  @media screen and (max-width: 750px) {
+    div.post {
+      padding: 0 10px 0 20px; } }
   div.post img {
     max-width: 100%; }
   div.post h2 {
@@ -2936,7 +2950,11 @@ div.post {
   div.post p {
     max-width: 600px; }
     div.post p span {
-      float: right; }
+      float: right;
+      margin-bottom: 20px; }
+      @media screen and (max-width: 750px) {
+        div.post p span {
+          margin-bottom: 10px; } }
     div.post p a {
       text-decoration: none;
       background-color: rgba(241, 238, 235, 0.7);
